--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <div id = "tab">
 <h3>Student Details:</h3>
-        <table class=".table-hover" id = "list">
+        <table class="table table-stripped" id = "list">
            
                 <tr>
                     <td>NAME</td>
